fixed invisible overlay text
webkit text fill somethingorother

--- a/assets/css/demostyle.css
+++ b/assets/css/demostyle.css
@@ -60,11 +60,15 @@ nav {
 }
 a { text-decoration: none; }
 a:hover, h1, h2 {
-    /*text-decoration: underline;*/
     background: url('../images/elements/fuzz1.gif');
     background-repeat: repeat;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+p, q, b, em, i, h1, h2, h3, h4, h5, h6 {
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: whitesmoke;
 }
 
 iframe.mainframe {
